@@ -1,22 +1,6 @@
 package org.nhnacademy.book2onandonbookservice.service.search;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatCode;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyList;
-import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.BDDMockito.given;
-import static org.mockito.BDDMockito.then;
-import static org.mockito.BDDMockito.willThrow;
-import static org.mockito.Mockito.lenient;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.times;
-
 import jakarta.persistence.EntityManager;
-import java.util.Collections;
-import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -29,11 +13,15 @@ import org.nhnacademy.book2onandonbookservice.repository.BookRepository;
 import org.nhnacademy.book2onandonbookservice.repository.BookSearchRepository;
 import org.springframework.data.domain.Pageable;
 
+import java.util.Collections;
+import java.util.List;
+
+import static org.assertj.core.api.AssertionsForInterfaceTypes.assertThat;
+import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.Mockito.*;
+
 @ExtendWith(MockitoExtension.class)
 class BookReindexServiceTest {
-
-    @InjectMocks
-    private BookReindexService bookReindexService;
 
     @Mock
     private BookRepository bookRepository;
@@ -47,120 +35,102 @@ class BookReindexServiceTest {
     @Mock
     private EntityManager entityManager;
 
+    @InjectMocks
+    private BookReindexService bookReindexService;
+
     @Test
-    @DisplayName("전체 재색인 성공: 정상적인 배치 저장 흐름")
+    @DisplayName("성공: DB의 모든 책을 조회하여 Elasticsearch에 저장 (reindexAll)")
     void reindexAll_Success() {
-        Book book1 = createBook(1L);
-        Book book2 = createBook(2L);
-        List<Book> books = List.of(book1, book2);
+        Book book1 = mock(Book.class);
+
+        Book book2 = mock(Book.class);
+        when(book2.getId()).thenReturn(2L);
+
+        List<Book> batch1 = List.of(book1, book2);
+
+        when(bookRepository.findAllByIdGreaterThan(eq(0L), any(Pageable.class)))
+                .thenReturn(batch1);
+
+        when(bookRepository.findAllByIdGreaterThan(eq(2L), any(Pageable.class)))
+                .thenReturn(Collections.emptyList());
 
         BookSearchDocument doc1 = mock(BookSearchDocument.class);
         BookSearchDocument doc2 = mock(BookSearchDocument.class);
 
-        given(bookRepository.findAllByIdGreaterThan(eq(0L), any(Pageable.class)))
-                .willReturn(books);
-        given(bookRepository.findAllByIdGreaterThan(eq(2L), any(Pageable.class)))
-                .willReturn(Collections.emptyList());
-
-        given(bookSearchIndexService.createDocument(book1)).willReturn(doc1);
-        given(bookSearchIndexService.createDocument(book2)).willReturn(doc2);
+        when(bookSearchIndexService.createDocument(book1)).thenReturn(doc1);
+        when(bookSearchIndexService.createDocument(book2)).thenReturn(doc2);
 
         bookReindexService.reindexAll();
 
-        ArgumentCaptor<List<BookSearchDocument>> captor = ArgumentCaptor.forClass(List.class);
-        then(bookSearchRepository).should(times(1)).saveAll(captor.capture());
-
-        List<BookSearchDocument> savedDocs = captor.getValue();
-        assertThat(savedDocs).hasSize(2);
-        assertThat(savedDocs).contains(doc1, doc2);
-
-        then(entityManager).should(times(1)).clear();
+        verify(bookSearchIndexService).createDocument(book1);
+        verify(bookSearchIndexService).createDocument(book2);
+        verify(bookSearchRepository, times(1)).saveAll(anyList());
+        verify(entityManager, times(1)).clear();
     }
 
     @Test
-    @DisplayName("전체 재색인: 데이터가 없는 경우 바로 종료")
-    void reindexAll_NoData() {
-        given(bookRepository.findAllByIdGreaterThan(eq(0L), any(Pageable.class)))
-                .willReturn(Collections.emptyList());
+    @DisplayName("성공: 일부 책 변환 실패 시 로그를 남기고 나머지는 저장 (Partial Conversion Failure)")
+    void reindexAll_PartialConversionFailure() {
+        Book book1 = mock(Book.class);
+
+        Book book2 = mock(Book.class);
+        when(book2.getId()).thenReturn(2L);
+
+        List<Book> batch = List.of(book1, book2);
+
+        when(bookRepository.findAllByIdGreaterThan(eq(0L), any(Pageable.class))).thenReturn(batch);
+        when(bookRepository.findAllByIdGreaterThan(eq(2L), any(Pageable.class))).thenReturn(Collections.emptyList());
+
+        BookSearchDocument doc1 = mock(BookSearchDocument.class);
+        when(bookSearchIndexService.createDocument(book1)).thenReturn(doc1);
+
+        doThrow(new RuntimeException("Conversion Error"))
+                .when(bookSearchIndexService).createDocument(book2);
 
         bookReindexService.reindexAll();
 
-        then(bookSearchIndexService).should(never()).createDocument(any());
-        then(bookSearchRepository).should(never()).saveAll(anyList());
-        then(entityManager).should(never()).clear();
-    }
+        ArgumentCaptor<Iterable<BookSearchDocument>> captor = ArgumentCaptor.forClass(Iterable.class);
+        verify(bookSearchRepository).saveAll(captor.capture());
 
-    @Test
-    @DisplayName("전체 재색인: 페이징 처리가 올바르게 동작하는지 확인")
-    void reindexAll_Pagination_Success() {
-        Book bookPage1 = createBook(10L);
-        Book bookPage2 = createBook(20L);
-
-        given(bookRepository.findAllByIdGreaterThan(anyLong(), any(Pageable.class)))
-                .willAnswer(invocation -> {
-                    Long lastId = invocation.getArgument(0);
-                    if (lastId == 0L) return List.of(bookPage1);
-                    if (lastId == 10L) return List.of(bookPage2);
-                    return Collections.emptyList();
-                });
-
-        bookReindexService.reindexAll();
-
-        then(bookSearchRepository).should(times(2)).saveAll(anyList());
-        then(entityManager).should(times(2)).clear();
-    }
-
-    @Test
-    @DisplayName("부분 실패: 특정 책 변환(createDocument) 실패 시 해당 건만 스킵하고 나머지는 저장")
-    void reindexAll_ConversionError_SkipOne() {
-        Book successBook = createBook(1L);
-        Book failBook = createBook(2L);
-        List<Book> books = List.of(successBook, failBook);
-
-        given(bookRepository.findAllByIdGreaterThan(eq(0L), any(Pageable.class)))
-                .willReturn(books);
-        given(bookRepository.findAllByIdGreaterThan(eq(2L), any(Pageable.class)))
-                .willReturn(Collections.emptyList());
-
-        BookSearchDocument doc = mock(BookSearchDocument.class);
-        given(bookSearchIndexService.createDocument(successBook)).willReturn(doc);
-        willThrow(new RuntimeException("Parsing Error")).given(bookSearchIndexService).createDocument(failBook);
-
-        bookReindexService.reindexAll();
-
-        ArgumentCaptor<List<BookSearchDocument>> captor = ArgumentCaptor.forClass(List.class);
-        then(bookSearchRepository).should(times(1)).saveAll(captor.capture());
-
-        List<BookSearchDocument> savedDocs = captor.getValue();
+        List<BookSearchDocument> savedDocs = (List<BookSearchDocument>) captor.getValue();
         assertThat(savedDocs).hasSize(1);
-        assertThat(savedDocs).contains(doc);
+
+        verify(entityManager).clear();
     }
 
     @Test
-    @DisplayName("배치 저장 실패: saveAll 실행 중 예외 발생 시 로그 남기고 계속 진행 (중단되지 않음)")
-    void reindexAll_SaveError_Continue() {
-        Book book = createBook(1L);
-        List<Book> books = List.of(book);
+    @DisplayName("성공: ES 배치 저장 실패 시 로그를 남기고 계속 진행 (Batch Save Failure)")
+    void reindexAll_BatchSaveFailure() {
 
-        given(bookRepository.findAllByIdGreaterThan(eq(0L), any(Pageable.class)))
-                .willReturn(books);
-        given(bookRepository.findAllByIdGreaterThan(eq(1L), any(Pageable.class)))
-                .willReturn(Collections.emptyList());
+        Book book1 = mock(Book.class);
+        when(book1.getId()).thenReturn(1L);
+        List<Book> batch = List.of(book1);
 
-        given(bookSearchIndexService.createDocument(book)).willReturn(mock(BookSearchDocument.class));
+        when(bookRepository.findAllByIdGreaterThan(eq(0L), any(Pageable.class))).thenReturn(batch);
+        when(bookRepository.findAllByIdGreaterThan(eq(1L), any(Pageable.class))).thenReturn(Collections.emptyList());
 
-        willThrow(new RuntimeException("Elasticsearch Down")).given(bookSearchRepository).saveAll(anyList());
+        BookSearchDocument doc1 = mock(BookSearchDocument.class);
+        when(bookSearchIndexService.createDocument(book1)).thenReturn(doc1);
 
-        assertThatCode(() -> bookReindexService.reindexAll()).doesNotThrowAnyException();
+        doThrow(new RuntimeException("ES Save Error"))
+                .when(bookSearchRepository).saveAll(anyList());
 
-        then(entityManager).should(times(1)).clear();
+        bookReindexService.reindexAll();
+
+
+        verify(entityManager).clear();
     }
 
-    // 핵심 수정 부분: lenient() 사용
-    private Book createBook(Long id) {
-        Book book = mock(Book.class);
-        // 호출되지 않아도 에러를 내지 않도록 lenient 설정
-        lenient().when(book.getId()).thenReturn(id);
-        return book;
+    @Test
+    @DisplayName("성공: DB에 책이 없는 경우 아무 작업도 안함 (Empty DB)")
+    void reindexAll_EmptyDB() {
+        when(bookRepository.findAllByIdGreaterThan(eq(0L), any(Pageable.class)))
+                .thenReturn(Collections.emptyList());
+
+        bookReindexService.reindexAll();
+
+        verify(bookSearchIndexService, never()).createDocument(any());
+        verify(bookSearchRepository, never()).saveAll(any());
+        verify(entityManager, never()).clear();
     }
 }
